Fix status bar covering sidedock #69

--- a/src/app/status-bar.scss
+++ b/src/app/status-bar.scss
@@ -25,6 +25,12 @@ body:not(.status-bar-default, .status-bar-full, .status-bar-cupertino) .status-b
 body:not(.status-bar-default, .status-bar-full, .status-bar-cupertino) .status-bar:not(:hover)::before {
   opacity: 0;
 }
+body:is(body, .status-bar-default):not(.status-bar-full, .status-bar-cupertino) {
+  .mod-sidedock.mod-right-split .workspace-tabs:last-of-type .node-insert-event,
+  .mod-sidedock.mod-right-split .workspace-tabs:last-of-type .view-content {
+    padding-bottom: 36px;
+  }
+}
 
 // Status bar: Full width
 body.status-bar-full {
